--- a/src/content/docs/guides/example.mdx
+++ b/src/content/docs/guides/example.mdx
@@ -11,25 +11,11 @@ Writing a good guide requires thinking about what your users are trying to do.
 - Read [about how-to guides](https://diataxis.fr/how-to-guides/) in the Diátaxis framework
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import Test from '../../../components/Test.astro';
+import IconWrapper from '../../../components/IconWrapper.astro';
 
-<Test />
+<IconWrapper />
 
 <Tabs>
-    <TabItem label="Cargo.toml">
-    ```toml
-    [dependencies]
-    foo = bar
-    ```
-    </TabItem>
-    <TabItem label="lib.rs">
-    ```rust
-    #[cfg_attr(mobile, tauri::mobile_entry_point)]
-    pub fn run() {
-        tauri::Builder::default()
-            .run(tauri::generate_context!())
-            .expect("error while running tauri application");
-    }
-    ```
-    </TabItem>
+  <TabItem label="Tab 1">Content 1</TabItem>
+  <TabItem label="Tab 2">Content 2</TabItem>
 </Tabs>
